updated resume, fixed spacing issues, edited content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,8 +130,8 @@ p {
 }
 
 .paddsection {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .paddsections {
@@ -650,7 +650,8 @@ p {
 --------------------------------------------------------------*/
 #portfolio {
   position: relative;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
+  padding-top: 0px;
 }
 
 #portfolio #portfolio-flters {
